--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -38,8 +38,8 @@
           eventClick: function(calEvent, jsEvent, view) {
               alert('Event: ' + calEvent.id);
           },
-
-          events: [
+          events: [{'start': '2015-11-30T10:00:00', 'end': '2015-11-30T10:30:00', 'title': 'Libre', 'color': 'red', 'id': 1}, {'start': '2015-11-30T10:30:00', 'end': '2015-11-30T11:00:00', 'title': 'Libre', 'color': '#73EB79', 'id': 2}, {'start': '2015-11-30T11:00:00', 'end': '2015-11-30T11:30:00', 'title': 'Libre', 'color': 'red', 'id': 3}]
+          /*events: [
             {
               title: 'Réservé',
               start: '2015-11-23T10:00:00',
@@ -244,7 +244,7 @@
               color: 'green',
               id:'12'
             },
-          ]
+          ]*/
         });
         
       });
