--- a/static/css/perso.css
+++ b/static/css/perso.css
@@ -1,3 +1,26 @@
+body {
+	padding-top: 60px;
+}
+
+.row_space {
+    padding: 20px 0;
+}
+
+.circle{
+    width:15px;
+    height:15px;
+    border-radius:50px;
+    font-size:20px;
+    color:#ffffff;
+    line-height:10px;
+    text-align:center;
+}
+.info{
+    position:absolute;
+    color:#000000;
+    margin-left:20px;
+}
+
 #calendar {
 	margin: 0 auto;
 }
