--- a/static/css/perso.css
+++ b/static/css/perso.css
@@ -21,6 +21,16 @@ body {
     margin-left:20px;
 }
 
+.panel-heading a:after {
+    font-family:'Glyphicons Halflings';
+    content:"\e114";
+    float: right;
+    color: grey;
+}
+.panel-heading a.collapsed:after {
+    content:"\e080";
+}
+
 #calendar {
 	margin: 0 auto;
 }
