--- a/static/css/perso.css
+++ b/static/css/perso.css
@@ -88,3 +88,8 @@ body {
     display: table-cell;
     max-width: 220px;
 }
+
+.select2 .select2-container--default .select2-search--inline .select2-search__field {
+    width: auto !important;
+}
+
